# rl4amcode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: a2c_ref.yml  default.yml  dqn_best.yml
configs/sweeps/: a2c_random.yml  count.py  dqn_random.yml
docs/: ARCHITECTURE.md
notebooks/: 01_a2c_workbench.ipynb  02_dqn_workbench.ipynb
src/rl4am/: __init__.py  baselines.py  cli.py  config.py  data.py  env.py  evaluation.py  metrics.py  results.py  slices.py  sweeps.py
src/rl4am/agents/: __init__.py  a2c.py  action_grid.py  dqn.py
src/rl4am/notebooks/: __init__.py  a2c_workbench.py  common.py  dqn_workbench.py  walk_forward_workbench.py
src/rl4am/reporting/: __init__.py  comparison.py  figures.py  slices.py  tables.py
src/rl4am/training/: __init__.py  a2c.py  common.py  dqn.py
tests/: test_a2c.py  test_action_grid.py  test_baselines.py  test_cli.py  test_comparison.py  test_config.py  test_data.py  test_dqn.py  test_env.py  test_evaluation.py  test_metrics.py  test_notebook_helpers.py  test_reporting.py  test_results.py  test_slice_reporting.py  test_slices.py
tests/fixtures/: eod_fixture.csv
